--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0"
   }
